manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photo-pass-backend
  namespace: photo-pass
  labels:
    app: photo-pass-backend
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: photo-pass-backend
    tier: backend
