manifest/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photo-pass-frontend
  namespace: photo-pass
  labels:
    app: photo-pass-frontend
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: photo-pass-frontend
    tier: frontend
