manifest/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: photo-pass-backend-network-policy
  namespace: photo-pass
spec:
  podSelector:
    matchLabels:
      app: photo-pass-backend
      tier: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: photo-pass
    - podSelector:
        matchLabels:
          app: photo-pass-frontend
          tier: frontend
    ports:
    - protocol: TCP
      port: 8000
  egress:
  - to: []
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: photo-pass-frontend-network-policy
  namespace: photo-pass
spec:
  podSelector:
    matchLabels:
      app: photo-pass-frontend
      tier: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 3000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: photo-pass-backend
          tier: backend
    ports:
    - protocol: TCP
      port: 8000
  - to: []
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
